--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-    font-family: "Poppins", "sans-serif";
+    font-family: "Roboto", Helvetica, Arial, sans-serif;;
     margin: 0;
     box-sizing: border-box;
     font-size: 1.1rem;
