--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 * {
-    font-family: "Poppins", "sans-serif";
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 1.1rem;
-    color: white;
+  font-family: "Poppins", "sans-serif";
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 1.1rem;
+  color: black;
 }
